syntax = "proto3";

package com.github.MaxReX92.go_yandex_gophkeeper;
option go_package = "internal/generated";

message Void {}

enum EventType {
  INITIAL = 0;
  ADD = 1;
  EDIT = 2;
  REMOVE = 3;
}

enum SecretType {
  BINARY = 0;
  CARD = 1;
  CREDENTIAL = 2;
  NOTE = 3;
}

message Secret {
  string identity = 1;
  SecretType type = 2;
  bytes content = 3;
}

message SecretEvent {
  EventType type = 1;
  Secret secret = 2;
}

message User {
  string identity = 1;
}

service SecretService {
  rpc Ping (Void) returns (Void);
  rpc SecretEvents (User) returns (stream SecretEvent);
}
